tests/auto/linguist/lupdate/testdata/good/parsejs/main.js
@@ -92,3 +92,6 @@ qsTrId("qtn_bar_baz", 10);
 
 //~ quoted " string with spaces "
 qsTr("translation with extras-quoted field");
+//~ quoted "empty string"
+qsTr("");
+
